Fixed author spacing

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -459,8 +459,8 @@ ul.list {
     list-style: none;
     padding: 0;
     margin: 0;
-    height: 14px;
-    min-height: initial;
+    line-height:14px;
+    min-height: 14px;
     li {
         display: inline-block;
         .author {
